--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
     - cron: 0/30 * * * *
 
 jobs:
-  pullcode:
+  build:
     runs-on: ubuntu-latest
     steps:
     - name: Get the source code
@@ -19,39 +19,29 @@ jobs:
        ls
 
     - name: Setup JDK
-      uses: actions/setup-java@v2.5.0
+      uses: actions/setup-java@v1
       with:
-        distribution: temurin
-        java-version: "11"
-    - name: Set execution flag for gradlew
-      run: chmod +x gradlew
-    - name: Build APK
-      run: bash ./gradlew assembleDebug --stacktrace
-    - name: Upload APK
-      uses: actions/upload-artifact@v1
-      with:
-        name: apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+        java-version: 1.8
 
-    - name: Get branch name
-      id: branch-name
-      uses: tj-actions/branch-names@v5.1
-    - name: Print branch    
+    - id: get-project
+      # 读取项目地址
+      name: Get project name
+      run: echo "::set-output name=PROJECT::$(cat project-to-build)"
+
+    - name: Clone project
+        # 拉取项目源码到虚拟环境
+      run: git clone --depth=1 ${{ steps.get-project.outputs.PROJECT }} project
+    - name: Build the app
+      # 构建调试版 APK
+      working-directory: ./project
       run: |
-        echo "Running on default: ${{ steps.branch-name.outputs.current_branch }}"
-      
-    - name: Download APK from build
-      uses: actions/download-artifact@v1
+        if [ ! -f "gradlew" ]; then gradle wrapper; fi
+        chmod +x gradlew
+        ./gradlew assembleDebug --stacktrace
+
+    - name: Upload APK
+        # 打包上传生成的 APK 到的网页端
+      uses: actions/upload-artifact@v2
       with:
-        name: apk
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.run_number }}
-        release_name: ${{ github.event.repository.name }}  ${{ steps.branch-name.outputs.current_branch }} v${{ github.run_number }}.${{ github.run_attempt }}
-    - name: Upload Release APK
-      id: upload_release_asset
-      uses: actions/upload-release-asset@v1.0.1
+        name: my-build-apk
+        path: ./**/*.apk
