--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,24 +13,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Get the source code
-      run: |
-       git clone --depth 1 $REPO_URL -b $REPO_BRANCH .
-       ls
-
     - name: Setup JDK
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
 
-    - id: get-project
-      # 读取项目地址
-      name: Get project name
-      run: echo "::set-output name=PROJECT::$(cat project-to-build)"
 
     - name: Clone project
         # 拉取项目源码到虚拟环境
-      run: git clone --depth=1 ${{ steps.get-project.outputs.PROJECT }} project
+      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH project
     - name: Build the app
       # 构建调试版 APK
       working-directory: ./project
