--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Clone project
         # 拉取项目源码到虚拟环境
-      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH .
+      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH .\
 
 
 
@@ -30,8 +30,8 @@ jobs:
       uses: gradle/gradle-build-action@v2
         
     - name: Execute Gradle build
-      working-directory: ./android
-      run: ./gradlew.bat
+      working-directory: .\android
+      run: .\gradlew.bat
 
     - name: Upload APK
         # 打包上传生成的 APK 到的网页端
