--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,11 @@
 name: Build and Release
 
-env:
-  REPO_URL: https://gitee.com/apaipai/dsm_helper.git
-  REPO_BRANCH: master
+# env:
+#   REPO_URL: https://gitee.com/apaipai/dsm_helper.git
+#   REPO_BRANCH: master
 
 on:
+  push:
   workflow_dispatch:
   schedule:
     - cron: 0/30 * * * *
@@ -13,18 +14,16 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
+
+    - name: Clone project
+        # 拉取项目源码到虚拟环境
+      run: git clone --depth 1 https://gitee.com/apaipai/dsm_helper.git -b master project
+
     - name: Setup JDK
       uses: actions/setup-java@v3
       with:
         distribution: temurin
         java-version: 11
-
-
-    - name: Clone project
-        # 拉取项目源码到虚拟环境
-      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH project
-
-
 
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
